Fix midnight text section alignment

--- a/styles.css
+++ b/styles.css
@@ -111,6 +111,7 @@
 
 .mid-night-content {
     display: flex;
+    align-items: center;
     text-align: center;
     justify-content: space-between;
     gap: 40px;
